--- a/translations/kangyur/translations/092-001_toh686-the_sovereign_ritual_of_amoghapasa.xml
+++ b/translations/kangyur/translations/092-001_toh686-the_sovereign_ritual_of_amoghapasa.xml
@@ -32,7 +32,7 @@
                                 <sponsor xml:id="UT22084-092-001-7235">Sun Ping, Tian Xingwen, and Sun Fanglin</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.11 <date>2023</date>
+                <edition>v 1.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -214,6 +214,9 @@
                 </change>
                 <change who="#celso" when="2023-09-19T15:14:16.763Z" type="text-version" status="1.0.11" xml:id="UT22084-092-001-7275">
                     <desc>minor typo</desc>
+                </change>
+                <change who="#laura" when="2023-10-06T12:59:01.568Z" type="text-version" status="1.0.12" xml:id="UT22084-092-001-7276">
+                    <desc>Tiny typo in n. 1102 (cerulaea)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -8719,7 +8722,7 @@
                                                 eight, the great goddess Śrī will appear in person, adorned with all ornaments and decked in divine
                                                 adornments of jewels, gold, and pearls. Her face will be bright like a blooming lotus, her eyes as
                                                 blue as an utpala lotus,<note place="end" xml:id="UT22084-092-001-2041"> A blue variety of the lotus
-                                                                (<foreign xml:lang="la" type="term">Nymphaea cerulaea</foreign>).</note> and she will
+                                                                (<foreign xml:lang="la" type="term">Nymphaea caerulea</foreign>).</note> and she will
                                                 hold an open lotus in her hand. Glowing like a lotus<note place="end" xml:id="UT22084-092-001-2042">
                                                         “Glowing like a lotus” is omitted in the Tib.</note> and sitting on a lotus seat amid a rain
                                                 of many jewels, gems, and golden lotuses, her two shining breasts will resemble one hundred thousand
@@ -26235,7 +26238,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བྱམས་པ།</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="2" status="verified">maitre ya</term>
                             <term xml:lang="bo" type="attestedSource" n="2" status="verified">མཻཏྲེ་ཡ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The bodhisattva who will be the next buddha.</p>
                             </note>
                         </gloss>
@@ -29119,7 +29122,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">elapatra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">e la’i ’dab ma</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཨེ་ལའི་འདབ་མ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the nāga kings.</p>
                             </note>
                         </gloss>
@@ -30108,14 +30111,12 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-092-001-7080">
+                        <gloss xml:id="UT22084-092-001-7080" type="person" mode="match">
                             <term type="translationMain">Śakra</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śakra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བརྒྱ་བྱིན།</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="2" status="verified">dbang po</term>
-                            <term xml:lang="bo" type="attestedSource" n="2" status="verified">དབང་པོ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>King of the gods in the Thirty-Three. Also known as Indra.</p>
                             </note>
                         </gloss>
