--- a/translations/kangyur/placeholders/081-013_toh444-the_tantra_the_prophecy_of_the_intent.xml
+++ b/translations/kangyur/placeholders/081-013_toh444-the_tantra_the_prophecy_of_the_intent.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dgongs pa lung bstan pa zhes bya ba'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">saṃdhivyākaraṇanāmatantra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-081-013"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12154" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:35:56 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-081-013-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:00:58.222Z" type="translation-status" status="3" xml:id="UT22084-081-013-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:00:58.222Z" type="text-version" status="0.0.1" xml:id="UT22084-081-013-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
