--- a/translations/kangyur/placeholders/081-015_toh446-the_questions_of_the_four_goddesses.xml
+++ b/translations/kangyur/placeholders/081-015_toh446-the_questions_of_the_four_goddesses.xml
@@ -9,7 +9,8 @@
                 <title type="mainTitle" xml:lang="en">The Questions of the Four Goddesses</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">lha mo bzhis yongs su zhus pa/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-081-015"/>
             </publicationStmt>
             <sourceDesc>
@@ -23,9 +24,19 @@
                     <idno source-id="O1JC114941JC12156" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:35:53 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-081-015-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:01:48.92Z" type="translation-status" status="3" xml:id="UT22084-081-015-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:01:48.92Z" type="text-version" status="0.0.1" xml:id="UT22084-081-015-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
