--- a/translations/kangyur/placeholders/082-003_toh452-victory_by_means_of_nondual_equality_a_sovereign_practice.xml
+++ b/translations/kangyur/placeholders/082-003_toh452-victory_by_means_of_nondual_equality_a_sovereign_practice.xml
@@ -11,13 +11,14 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gnyis su med pa mnyam pa nyid rnam par rgyal ba zhes bya ba'i rtog pa'i rgyal po chen po/</title>
                 <title type="otherTitle" xml:lang="zh">《無二平等勝儀軌大王》（大正藏：《佛說無二平等最上瑜伽大教王經》）</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gnyis med rnam rgyal/</title>
-                <sponsor ref="eft:sponsor-222">Late Lim Kim Heng, Late Low Lily, Late Lee Tiang Chuan, Late Chen Lee Kuan, Lee Hoi Lang, Ng Ah Chon, all sentient beings</sponsor>
+                <sponsor xml:id="UT22084-082-003-1">Late Lim Kim Heng, Late Low Lily, Late Lee Tiang Chuan, Late Chen Lee Kuan, Lee Hoi Lang, Ng Ah Chon, all sentient beings</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-082-003"/>
                 <date/>
             </publicationStmt>
@@ -32,18 +33,45 @@
                     <idno source-id="O1JC114941JC12163" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-01T04:21:36.329Z" user="cabie-sim">01/08/2022 04:21:36</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-06-09T16:46:32.758Z" user="john">0.0.1</note>
-                <note type="updated" update="publication-date" value="" date-time="2020-06-09T16:46:32.758Z" user="john"/>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-06-09T16:48:53.695Z" user="john">note about Degé source text</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2020-06-09T17:08:35.462Z" user="john">0.0.3</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2020-11-17T18:59:29.424Z" user="john">Updated alternative title and note about source texts.</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-01T04:19:05.004Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-01T04:19:48.155Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2022-08-01T04:21:20.549Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2022-08-01T04:21:34.334Z" user="cabie-sim">Auto (update-sponsorship)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2020-06-09T16:46:32.758Z" type="text-version" status="0.0.1" xml:id="UT22084-082-003-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#john" when="2020-06-09T16:46:32.758Z" type="publication-date" xml:id="UT22084-082-003-3">
+                    <desc/>
+                </change>
+                <change who="#john" when="2020-06-09T16:48:53.695Z" type="text-version" status="0.0.2" xml:id="UT22084-082-003-4">
+                    <desc>note about Degé source text</desc>
+                </change>
+                <change who="#john" when="2020-06-09T17:08:35.462Z" type="text-version" status="0.0.3" xml:id="UT22084-082-003-5">
+                    <desc>0.0.3</desc>
+                </change>
+                <change who="#john" when="2020-11-17T18:59:29.424Z" type="text-version" status="0.0.4" xml:id="UT22084-082-003-6">
+                    <desc>Updated alternative title and note about source texts.</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-08-01T04:19:05.004Z" type="text-version" status="0.0.6" xml:id="UT22084-082-003-7">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-08-01T04:19:48.155Z" type="text-version" status="0.0.7" xml:id="UT22084-082-003-8">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-08-01T04:21:20.549Z" type="text-version" status="0.0.8" xml:id="UT22084-082-003-9">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-08-01T04:21:34.334Z" type="text-version" status="0.0.9" xml:id="UT22084-082-003-10">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.10" xml:id="UT22084-082-003-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:06:51.166Z" type="translation-status" status="3" xml:id="UT22084-082-003-12">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:06:51.166Z" type="text-version" status="0.0.11" xml:id="UT22084-082-003-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
