--- a/translations/tengyur/placeholders/030-003_toh1787-sarvaguhyapradipatika.xml
+++ b/translations/tengyur/placeholders/030-003_toh1787-sarvaguhyapradipatika.xml
@@ -9,15 +9,16 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Sarva­guhya­pradīpa­ṭīkā</title>
                 <title xml:lang="en" type="mainTitle">Commentary on the Lamp of All Secrets</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-030-003"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1787" type="text">
                     <ref>Toh 1787</ref>
                     <biblScope>ff. 203v-234r</biblScope>
-                    <author ref="eft:entity-17956" xml:lang="Sa-Ltn">Yaśobhadra</author>
-                    <author role="translatorTib" ref="eft:entity-17863" xml:lang="Sa-Ltn">Smṛtijñānakīrti</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-030-003-1">Yaśobhadra</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-030-003-2">Smṛtijñānakīrti</author>
                     <location work="UT23703" count-pages="62">
                         <volume number="30" start-page="406" end-page="467"/>
                     </location>
@@ -26,10 +27,21 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh443"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:54:23 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-030-003-3" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-030-003-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:12:45.662Z" type="translation-status" status="3" xml:id="UT23703-030-003-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:12:45.662Z" type="text-version" status="0.0.1" xml:id="UT23703-030-003-6">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
