--- a/translations/tengyur/placeholders/030-002_toh1786-sadangayoganamatika.xml
+++ b/translations/tengyur/placeholders/030-002_toh1786-sadangayoganamatika.xml
@@ -9,16 +9,17 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Ṣaḍaṅga­yoga­nāma­ṭīkā</title>
                 <title xml:lang="en" type="mainTitle">Extensive Commentary on [Nāgārjuna's] “Six-Branched Yoga”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-030-002"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1786" type="text">
                     <ref>Toh 1786</ref>
                     <biblScope>ff. 201v-203v</biblScope>
-                    <author ref="eft:entity-17927" xml:lang="Sa-Ltn">Candrakīrti</author>
-                    <author role="translatorTib" ref="eft:entity-17459" xml:lang="Bo-Ltn">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
-                    <author role="translatorTib" ref="eft:entity-17476" xml:lang="Sa-Ltn">Śraddhākaravarman</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-030-002-1">Candrakīrti</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-030-002-2">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-030-002-3">Śraddhākaravarman</author>
                     <location work="UT23703" count-pages="5">
                         <volume number="30" start-page="402" end-page="406"/>
                     </location>
@@ -26,11 +27,24 @@
                     <idno source-id="O1JC76301JC8341" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:54:22 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-                <note type="updated" update="general" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin">The root text being commented upon is not in Derge, but is found only in Peking and Narthang.</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-030-002-4" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="general" xml:id="UT23703-030-002-5" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc>The root text being commented upon is not in Derge, but is found only in Peking and Narthang.</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-030-002-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:14:54.076Z" type="translation-status" status="3" xml:id="UT23703-030-002-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:14:54.076Z" type="text-version" status="0.0.1" xml:id="UT23703-030-002-8">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
