--- a/translations/tengyur/placeholders/035-005_toh1800-exposition_of_bodhicitta.xml
+++ b/translations/tengyur/placeholders/035-005_toh1800-exposition_of_bodhicitta.xml
@@ -13,21 +13,22 @@
                 <title xml:lang="Sa-Ltn" type="longTitle">Bodhicitta­vivaraṇa­nāma</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-035-005"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1800" type="text">
                     <ref>Toh 1800</ref>
                     <biblScope>ff. 38r-42v</biblScope>
-                    <author ref="eft:entity-1707" xml:lang="Sa-Ltn">Nāgārjuna</author>
-                    <author role="translatorTib" ref="eft:entity-17964" xml:lang="Sa-Ltn">Guṇākara</author>
-                    <author role="translatorTib" ref="eft:entity-17965" xml:lang="Bo-Ltn">lo tsa ba rab zhi bshes gnyen</author>
-                    <editor role="reviser" ref="eft:entity-17483" xml:lang="Bo-Ltn">bod kyi lo tsA ba pa tshab nyi ma grags</editor>
-                    <editor role="reviser" ref="eft:entity-17915" xml:lang="Sa-Ltn">Kanakavarman</editor>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-035-005-1">Nāgārjuna</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-035-005-2">Guṇākara</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-035-005-3">lo tsa ba rab zhi bshes gnyen</author>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT23703-035-005-4">bod kyi lo tsA ba pa tshab nyi ma grags</editor>
+                    <editor role="reviser" xml:lang="Sa-Ltn" xml:id="UT23703-035-005-5">Kanakavarman</editor>
                     <location work="UT23703" count-pages="10">
                         <volume number="35" start-page="75" end-page="84"/>
                     </location>
@@ -35,11 +36,24 @@
                     <idno source-id="O1JC76301JC8361" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-11T11:27:10.885Z" user="admin">11/06/2022 11:27:10</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-11T11:15:46.265Z" user="andre">Auto (entity-merge-attribution)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-035-005-6" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#andre" when="2022-06-11T11:15:46.265Z" type="text-version" status="0.0.1" xml:id="UT23703-035-005-7">
+                    <desc>Auto (entity-merge-attribution)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT23703-035-005-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:19:22.287Z" type="translation-status" status="3" xml:id="UT23703-035-005-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:19:22.287Z" type="text-version" status="0.0.3" xml:id="UT23703-035-005-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
