--- a/translations/tengyur/placeholders/035-006_toh1801-exposition_of_bodhicitta.xml
+++ b/translations/tengyur/placeholders/035-006_toh1801-exposition_of_bodhicitta.xml
@@ -10,19 +10,20 @@
                 <title xml:lang="en" type="mainTitle">A Commentary on Bodhicitta</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-035-006"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1801" type="text">
                     <ref>Toh 1801</ref>
                     <biblScope>ff. 42v-45r</biblScope>
-                    <author ref="eft:entity-1707" xml:lang="Sa-Ltn">Nāgārjuna</author>
-                    <author role="translatorTib" ref="eft:entity-17966" xml:lang="Sa-Ltn">Jayānanda (Kaśmīr)</author>
-                    <author role="translatorTib" ref="eft:entity-17967" xml:lang="Bo-Ltn">bod kyi lo tsa ba khu mdo sde 'bar</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-035-006-1">Nāgārjuna</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-035-006-2">Jayānanda (Kaśmīr)</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-035-006-3">bod kyi lo tsa ba khu mdo sde 'bar</author>
                     <location work="UT23703" count-pages="6">
                         <volume number="35" start-page="84" end-page="89"/>
                     </location>
@@ -30,11 +31,24 @@
                     <idno source-id="O1JC76301JC8362" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-11T11:16:48.871Z" user="admin">11/06/2022 11:16:48</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-11T11:15:46.265Z" user="andre">Auto (entity-merge-attribution)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-035-006-4" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#andre" when="2022-06-11T11:15:46.265Z" type="text-version" status="0.0.1" xml:id="UT23703-035-006-5">
+                    <desc>Auto (entity-merge-attribution)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT23703-035-006-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:20:22.842Z" type="translation-status" status="3" xml:id="UT23703-035-006-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:20:22.842Z" type="text-version" status="0.0.3" xml:id="UT23703-035-006-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
