--- a/translations/tengyur/placeholders/036-004_toh1829-bodhicittavivaranatika.xml
+++ b/translations/tengyur/placeholders/036-004_toh1829-bodhicittavivaranatika.xml
@@ -9,15 +9,16 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Bodhicitta­vivaraṇa­ṭīkā</title>
                 <title xml:lang="en" type="mainTitle">An Explanation of [Nāgārjuna’s] “Commentary on Bodhicitta”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-036-004"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1829" type="text">
                     <ref>Toh 1829</ref>
                     <biblScope>ff. 117r-142v</biblScope>
-                    <author ref="eft:entity-17863" xml:lang="Sa-Ltn">Smṛtijñānakīrti</author>
-                    <author role="translatorTib" ref="eft:entity-17863" xml:lang="Sa-Ltn">Smṛtijñānakīrti</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-036-004-1">Smṛtijñānakīrti</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-036-004-2">Smṛtijñānakīrti</author>
                     <location work="UT23703" count-pages="52">
                         <volume number="36" start-page="233" end-page="284"/>
                     </location>
@@ -27,10 +28,21 @@
                 <link type="isCommentaryOf" target="toh1800"/>
                 <link type="isCommentaryOf" target="toh1801"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:49:21 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-036-004-3" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-036-004-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:21:25.719Z" type="translation-status" status="3" xml:id="UT23703-036-004-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:21:25.719Z" type="text-version" status="0.0.1" xml:id="UT23703-036-004-6">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
