--- a/translations/tengyur/placeholders/035-019_toh1814-vajrasattvasadhana.xml
+++ b/translations/tengyur/placeholders/035-019_toh1814-vajrasattvasadhana.xml
@@ -12,18 +12,19 @@
                 <title xml:lang="Bo-Ltn" type="longTitle">rdo rje sems dpa'i sgrub thabs zhes bya ba/</title>
                 <title xml:lang="Sa-Ltn" type="longTitle">Vajrasattva­sādhana­nāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-035-019"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1814" type="text">
                     <ref>Toh 1814</ref>
                     <biblScope>ff. 195v-204v</biblScope>
-                    <author ref="eft:entity-17927" xml:lang="Sa-Ltn">Candrakīrti</author>
-                    <author role="translatorTib" ref="eft:entity-17975" xml:lang="Bo-Ltn">lo tsa ba klog skya gzhon nu 'bar</author>
-                    <author role="translatorTib" ref="eft:entity-17684" xml:lang="Sa-Ltn">Tathāgatarakṣita</author>
-                    <editor role="reviser" ref="eft:entity-17812" xml:lang="Sa-Ltn">Dīpaṃkararakṣita</editor>
-                    <editor role="reviser" ref="eft:entity-17976" xml:lang="Bo-Ltn">khams pa dge slong lo tsA ba ba ri</editor>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-035-019-1">Candrakīrti</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-035-019-2">lo tsa ba klog skya gzhon nu 'bar</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-035-019-3">Tathāgatarakṣita</author>
+                    <editor role="reviser" xml:lang="Sa-Ltn" xml:id="UT23703-035-019-4">Dīpaṃkararakṣita</editor>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT23703-035-019-5">khams pa dge slong lo tsA ba ba ri</editor>
                     <location work="UT23703" count-pages="19">
                         <volume number="35" start-page="390" end-page="408"/>
                     </location>
@@ -31,10 +32,21 @@
                     <idno source-id="O1JC76301JC8375" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:49:26 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-035-019-6" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-035-019-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:22:21.292Z" type="translation-status" status="3" xml:id="UT23703-035-019-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:22:21.292Z" type="text-version" status="0.0.1" xml:id="UT23703-035-019-9">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
