--- a/translations/tengyur/placeholders/035-020_toh1815-vajrasattvasadhananibandha.xml
+++ b/translations/tengyur/placeholders/035-020_toh1815-vajrasattvasadhananibandha.xml
@@ -9,15 +9,16 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Vajrasattva­sādhana­nibandha</title>
                 <title xml:lang="en" type="mainTitle">A Commentary on the “Vajrasattva Sādhana”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-035-020"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1815" type="text">
                     <ref>Toh 1815</ref>
                     <biblScope>ff. 204v-209r</biblScope>
-                    <author ref="eft:entity-17977" xml:lang="Sa-Ltn">Līlāvajra</author>
-                    <author role="translatorTib" ref="eft:entity-17704" xml:lang="Bo-Ltn">dge slong rin chen grub</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-035-020-1">Līlāvajra</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-035-020-2">dge slong rin chen grub</author>
                     <location work="UT23703" count-pages="10">
                         <volume number="35" start-page="408" end-page="417"/>
                     </location>
@@ -26,11 +27,24 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh1814"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:49:27 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-                <note type="updated" update="general" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin">Text translated by Bu-ston from the personal copy of Vibhūticandra (member of Śākyaśrībhadra's entourage).</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-035-020-3" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="general" xml:id="UT23703-035-020-4" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc>Text translated by Bu-ston from the personal copy of Vibhūticandra (member of Śākyaśrībhadra's entourage).</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-035-020-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:23:22.886Z" type="translation-status" status="3" xml:id="UT23703-035-020-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:23:22.886Z" type="text-version" status="0.0.1" xml:id="UT23703-035-020-7">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
