--- a/translations/tengyur/placeholders/036-010_toh1835-vajrasattvasadhanavyakhya.xml
+++ b/translations/tengyur/placeholders/036-010_toh1835-vajrasattvasadhanavyakhya.xml
@@ -9,16 +9,17 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Vajrasattva­sādhana­bhāṣya</title>
                 <title xml:lang="en" type="mainTitle">An Explanation of the Vajrasattva Sādhana</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-036-010"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1835" type="text">
                     <ref>Toh 1835</ref>
                     <biblScope>ff. 280v-285v</biblScope>
-                    <author ref="eft:entity-17684" xml:lang="Sa-Ltn">Tathāgatarakṣita</author>
-                    <author role="translatorTib" ref="eft:entity-17597" xml:lang="Bo-Ltn">khams pa ba ri lo tsa ba</author>
-                    <author role="translatorTib" ref="eft:entity-17812" xml:lang="Sa-Ltn">Dīpaṃkararakṣita</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-036-010-1">Tathāgatarakṣita</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-036-010-2">khams pa ba ri lo tsa ba</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-036-010-3">Dīpaṃkararakṣita</author>
                     <location work="UT23703" count-pages="11">
                         <volume number="36" start-page="560" end-page="570"/>
                     </location>
@@ -27,10 +28,21 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh1814"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:49:08 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-036-010-4" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-036-010-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:24:15.81Z" type="translation-status" status="3" xml:id="UT23703-036-010-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:24:15.81Z" type="text-version" status="0.0.1" xml:id="UT23703-036-010-7">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
