--- a/translations/tengyur/placeholders/122-001_toh4019-lankavataranamamahayanasutravrttitathagatahrdayalamkara.xml
+++ b/translations/tengyur/placeholders/122-001_toh4019-lankavataranamamahayanasutravrttitathagatahrdayalamkara.xml
@@ -10,18 +10,18 @@
                 <title xml:lang="en" type="mainTitle">A Commentary on The Descent into Laṅkā called "The Ornament of the Heart of the Tathāgata"</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 
-                    <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-122-001"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh4019" type="text">
                     <ref>Toh 4019</ref>
                     <biblScope>ff. 1v-310r</biblScope>
-                    <author ref="eft:entity-17924" xml:lang="Sa-Ltn">Advayajñānavajra</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-122-001-1">Advayajñānavajra</author>
                     <location work="UT23703" count-pages="618">
                         <volume number="122" start-page="2" end-page="619"/>
                     </location>
@@ -30,10 +30,21 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh107"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-15T11:33:04.993Z" user="admin">15/12/2021 11:33:04</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-3981-4019_PH_new_v2.4.xml" date-time="2022-01-28T10:32:05.149Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2022-01-28T10:32:05.149Z" type="import" xml:id="UT23703-122-001-2" source="tengyur-data-3981-4019_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT23703-122-001-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:25:15.014Z" type="translation-status" status="3" xml:id="UT23703-122-001-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:25:15.014Z" type="text-version" status="0.0.3" xml:id="UT23703-122-001-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
