--- a/translations/kangyur/placeholders/078-004_toh373-the_tantra_of_the_arising_of_samvara.xml
+++ b/translations/kangyur/placeholders/078-004_toh373-the_tantra_of_the_arising_of_samvara.xml
@@ -11,11 +11,12 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahāśaṃvarodayanāmatantrarāja</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2021</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-078-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -29,10 +30,21 @@
                     <idno source-id="O1JC114941JC12070" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-13T08:47:38.755Z" user="admin">13/12/2021 08:47:38</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-13T08:47:34.725Z" user="andreas">0.0.1</note>
-</notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#andreas" when="2021-12-13T08:47:34.725Z" type="text-version" status="0.0.1" xml:id="UT22084-078-004-1">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-078-004-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:26:34.747Z" type="translation-status" status="3" xml:id="UT22084-078-004-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:26:34.747Z" type="text-version" status="0.0.3" xml:id="UT22084-078-004-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
