--- a/translations/kangyur/placeholders/080-008_toh424-the_tantra_of_buddhakapala.xml
+++ b/translations/kangyur/placeholders/080-008_toh424-the_tantra_of_buddhakapala.xml
@@ -11,11 +11,12 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrībuddhakapāla­nāmayoginītantrarāja</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-080-008"/>
                 <date/>
             </publicationStmt>
@@ -30,12 +31,24 @@
                     <idno source-id="O1JC114941JC12127" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2020-06-17T07:11:37.207Z" user="admin">17/06/2020 07:11:37</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="translation-status" value="0" date-time="2020-06-17T07:09:05.128Z" user="line-tofte"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-080-008-1">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2020-06-17T07:09:05.128Z" type="translation-status" status="0" xml:id="UT22084-080-008-2">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-080-008-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:27:27.102Z" type="translation-status" status="3" xml:id="UT22084-080-008-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:27:27.102Z" type="text-version" status="0.0.3" xml:id="UT22084-080-008-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
