--- a/translations/kangyur/placeholders/081-010_toh441-the_extant_khasama_tantra.xml
+++ b/translations/kangyur/placeholders/081-010_toh441-the_extant_khasama_tantra.xml
@@ -13,11 +13,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">ji bzhin brnyes pa nam mkha' dang mnyam pa'i rgyud/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-081-010"/>
                 <date/>
             </publicationStmt>
@@ -32,16 +33,36 @@
                     <idno source-id="O1JC114941JC12149" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-06-10T14:58:22.426Z" user="admin">10/06/2021 14:58:22</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="translation-status" value="0" date-time="2020-06-17T07:10:12.977Z" user="line-tofte"/>
-    <note type="updated" update="translation-status" value="4" date-time="2021-06-10T14:41:46.426Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-10T14:41:46.426Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="" date-time="2021-06-10T14:58:17.204Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-06-10T14:58:17.204Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-081-010-1">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2020-06-17T07:10:12.977Z" type="translation-status" status="0" xml:id="UT22084-081-010-2">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2021-06-10T14:41:46.426Z" type="translation-status" status="4" xml:id="UT22084-081-010-3">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-10T14:41:46.426Z" type="text-version" status="0.0.2" xml:id="UT22084-081-010-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-10T14:58:17.204Z" type="translation-status" status="" xml:id="UT22084-081-010-5">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2021-06-10T14:58:17.204Z" type="text-version" status="0.0.3" xml:id="UT22084-081-010-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-081-010-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:28:27.639Z" type="translation-status" status="3" xml:id="UT22084-081-010-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:28:27.639Z" type="text-version" status="0.0.5" xml:id="UT22084-081-010-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
