--- a/translations/tengyur/placeholders/021-005_toh1424-khasamananamatika.xml
+++ b/translations/tengyur/placeholders/021-005_toh1424-khasamananamatika.xml
@@ -10,10 +10,11 @@
                 <title type="mainTitle" xml:lang="bo">ནམ་མཁའ་དང་མཉམ་པ་ཞེས་བྱ་བའི་རྒྱ་ཆེར་འགྲེལ་པ།</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-021-005"/>
                 <date/>
             </publicationStmt>
@@ -21,9 +22,9 @@
                 <bibl key="toh1424" type="text">
                     <ref>Toh 1424</ref>
                     <biblScope>ff. 153r-171r</biblScope>
-                    <author ref="eft:entity-8406" xml:lang="Sa-Ltn">Ratnākaraśānti</author>
-                    <author role="translatorTib" ref="eft:entity-17630" xml:lang="Bo-Ltn">lo tsa ba dge slong shes rab ye shes</author>
-                    <author role="translatorTib" ref="eft:entity-17631" xml:lang="Sa-Ltn">Śūnyatāsamādhivajra</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-021-005-1">Ratnākaraśānti</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-021-005-2">lo tsa ba dge slong shes rab ye shes</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-021-005-3">Śūnyatāsamādhivajra</author>
                     <location work="UT23703" count-pages="37">
                         <volume number="21" start-page="305" end-page="341"/>
                     </location>
@@ -33,14 +34,31 @@
                 <link type="isCommentaryOf" target="toh441"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-20T09:25:14.63Z" user="admin">20/01/2022 09:25:14</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T11:30:49.498Z" user="andreas">0.0.1</note>
-                <note type="updated" update="publication-date" value="" date-time="2020-07-06T11:30:49.498Z" user="andreas"/>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1401-1424_PH_new_v2.3.xml" date-time="2021-11-02T13:18:33.485Z" user="admin"/>
                 <note type="title" date-time="2021-11-28T22:32:16.209Z" user="john">A commentary on The Extant Khasama Tantra (Yathālabdhakhasamatantra), Toh 441, not on The Tantra Equal to the Sky (Khasamatantra), Toh 386.</note>
-            
-    <note type="updated" update="text-version" value="0.0.5" date-time="2022-01-20T09:14:07.444Z" user="admin">Auto (correct-orphaned-attributions)</note>
-</notesStmt>
+            </notesStmt>
+            <revisionDesc>
+                <change who="#andreas" when="2020-07-06T11:30:49.498Z" type="text-version" status="0.0.1" xml:id="UT23703-021-005-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#andreas" when="2020-07-06T11:30:49.498Z" type="publication-date" xml:id="UT23703-021-005-5">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T13:18:33.485Z" type="import" xml:id="UT23703-021-005-6" source="tengyur-data-1401-1424_PH_new_v2.3.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2022-01-20T09:14:07.444Z" type="text-version" status="0.0.5" xml:id="UT23703-021-005-7">
+                    <desc>Auto (correct-orphaned-attributions)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT23703-021-005-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:30:48.298Z" type="translation-status" status="3" xml:id="UT23703-021-005-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:30:48.298Z" type="text-version" status="0.0.7" xml:id="UT23703-021-005-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
