--- a/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
+++ b/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
@@ -22,12 +22,12 @@
                 <editor role="copyEditor" xml:id="UT22084-043-002-32">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2023</date>
+                <edition>v 0.1.10 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-043-002"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +90,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-26T08:30:16.809Z" type="text-version" status="0.1.9" xml:id="UT22084-043-002-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T07:01:08.556Z" type="translation-status" status="2.c" xml:id="UT22084-043-002-36">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T07:01:08.556Z" type="text-version" status="0.1.10" xml:id="UT22084-043-002-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
