--- a/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
+++ b/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-062-014-21">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-062-014"/>
                 <date/>
             </publicationStmt>
@@ -71,6 +71,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-25T13:09:40.479Z" type="text-version" status="0.0.8" xml:id="UT22084-062-014-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T10:06:38.607Z" type="translation-status" status="2.e" xml:id="UT22084-062-014-25">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T10:06:38.607Z" type="text-version" status="0.0.9" xml:id="UT22084-062-014-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
