--- a/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-062-015-24">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-062-015"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +80,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-25T13:10:32.753Z" type="text-version" status="0.0.9" xml:id="UT22084-062-015-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T10:07:35.816Z" type="translation-status" status="2.e" xml:id="UT22084-062-015-28">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T10:07:35.816Z" type="text-version" status="0.0.10" xml:id="UT22084-062-015-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
