--- a/translations/kangyur/translations/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/translations/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -4,44 +4,36 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">phyogs bcu’i mun pa rnam
-                                        par sel ba</title>
-                                <title type="mainTitle" xml:lang="bo">ཕྱོགས་བཅུའི་མུན་པ་རྣམ་པར་སེལ་བ།</title>
-                                <title type="mainTitle" xml:lang="en">Dispelling the Darkness of the
+                <title type="mainTitle" xml:lang="en">Dispelling the Darkness of the
                                         Ten Directions</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Daśadigandha­kāravidhvaṃsana</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཕྱོགས་བཅུའི་མུན་པ་རྣམ་པར་སེལ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa phyogs bcu’i mun
-                                        pa rnam par sel ba zhes bya ba theg pa chen po’i mdo</title>
-                                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra
+                <title type="mainTitle" xml:lang="Sa-Ltn">Daśadigandha­kāravidhvaṃsana</title>
+                <title type="mainTitle" xml:lang="bo">ཕྱོགས་བཅུའི་མུན་པ་རྣམ་པར་སེལ་བ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">phyogs bcu’i mun pa rnam
+                                        par sel ba</title>
+                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra
                                         “Dispelling the Darkness of the Ten Directions”</title>
-                                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­daśadigandha­kāravidhvaṃsana­nāma­mahāyāna­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh">佛説滅十方冥經</title>
-                                <author xml:id="UT22084-068-003-1" role="translatorMain">Translated
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­daśadigandha­kāravidhvaṃsana­nāma­mahāyāna­sūtra</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཕྱོགས་བཅུའི་མུན་པ་རྣམ་པར་སེལ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa phyogs bcu’i mun
+                                        pa rnam par sel ba zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">佛説滅十方冥經</title>
+                <author role="translatorMain" xml:id="UT22084-068-003-1">Translated
                                         by the Sakya Pandita Translation Group<lb/>under the
                                         patronage and supervision of 84000: Translating the Words of
                                         the Buddha</author>
-                                <editor role="projectEditor" xml:id="UT22084-068-003-3">Laura
-                                        Goetz</editor>
-                                <consultant role="dharmaMaster" xml:id="UT22084-068-003-4">Khenpo
-                                        Kalsang Gyaltsen</consultant>
-                                <author role="translatorEng" xml:id="UT22084-068-003-5">Khenpo
-                                        Kalsang Gyaltsen</author>
-                                <consultant role="projectManager" xml:id="UT22084-068-003-6">Ani
-                                        Kunga Chodron</consultant>
-                                <author role="translatorEng" xml:id="UT22084-068-003-7">Ani Kunga
-                                        Chodron</author>
-                                <editor role="projectEditor" xml:id="UT22084-068-003-8">Ryan
-                                        Damron</editor>
-                                <editor role="copyEditor" xml:id="UT22084-068-003-30">Konchog
-                                        Norbu</editor>
-                                <editor role="projectEditor" xml:id="UT22084-068-003-43">David
-                                        Fiordalis</editor>
-                                <editor role="TEImarkupEditor" xml:id="UT22084-068-003-56">Martina
-                                        Cotter</editor>
-                        </titleStmt>
+                <editor role="projectEditor" xml:id="UT22084-068-003-3">Laura Goetz</editor>
+                <consultant role="dharmaMaster" xml:id="UT22084-068-003-4">Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-068-003-5">Khenpo Kalsang Gyaltsen</author>
+                <consultant role="projectManager" xml:id="UT22084-068-003-6">Ani Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-068-003-7">Ani Kunga Chodron</author>
+                <editor role="projectEditor" xml:id="UT22084-068-003-8">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-068-003-30">Konchog Norbu</editor>
+                <editor role="projectEditor" xml:id="UT22084-068-003-43">David Fiordalis</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-068-003-56">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-068-003-236">Rory Lindsay</editor>
+            </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -50,7 +42,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="2">
+                                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -66,7 +58,7 @@
                                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2023-09-02</date>
+                                <date>2023-10-11</date>
                         </publicationStmt>
 
                         <sourceDesc>
@@ -158,6 +150,15 @@
                 <change who="#line-tofte" when="2023-09-08T11:28:21.216Z" type="text-version" status="0.0.2" xml:id="UT22084-068-003-225">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2023-10-06T10:53:08.985Z" type="text-version" status="0.0.3" xml:id="UT22084-068-003-237">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-11T12:11:49.353Z" type="translation-status" status="1.a" xml:id="UT22084-068-003-238">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-11T12:11:49.353Z" type="text-version" status="1.0.0" xml:id="UT22084-068-003-239">
+                    <desc>First published version</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -220,12 +221,12 @@
                                                 explaining to the youth that if he keeps in mind
                                                 whichever of those thus-gone ones is appropriate
                                                 when departing from the city in their respective
-                                                direction he will be free from fear and harm when
+                                                direction, he will be free from fear and harm when
                                                 traveling and accomplish his purpose. After the
                                                 Buddha gives this teaching, Shining Countenance and
                                                 the others in the assembly are able to see those ten
                                                 buddhas and their realms directly before their eyes,
-                                                and at the prompting of Śāriputra the Buddha
+                                                and at the prompting of Śāriputra, the Buddha
                                                 prophesies their eventual awakening. The Buddha
                                                 further explains that someone who merely reads,
                                                 teaches, or writes down and keeps this teaching with
@@ -459,7 +460,7 @@
                                                 <l>Toward all sentient beings.</l>
                                                 <l>If you do not disrespect any sentient being,</l>
                                                 <l>You will experience no fear.<note place="end" xml:id="UT22084-068-003-98"> Reading Yongle,
-                                                  Lithang, Peking Narthang, Choné, and Zhol <foreign xml:lang="Bo-Ltn" type="quote">’jigs pa</foreign>.
+                                                        Lithang, Kangxi, Narthang, Choné, and Lhasa <foreign xml:lang="Bo-Ltn" type="quote">’jigs pa</foreign>.
                                                   Degé reads <foreign xml:lang="Bo-Ltn" type="quote">’jigs par</foreign>, which breaks from the
                                                   pattern of similar passages here. </note>
                                                 </l>
